# TradingAnalyze

./: .gitignore  FINAL_PROJECT_STATUS.md  README.md  SOLUTION_SUMMARY.md  pyproject.toml  test_data.csv
examples/: README.md  complete_factor_analysis.sh  quick_factor_example.sh
qlib_data/: config.pkl  data_stats.pkl  validation_report.txt
qlib_data/features/: data.csv
src/trading_analyze/: log_utils.py  main.py  run.py
src/trading_analyze/algs/: README.md
src/trading_analyze/cli/: __init__.py  data_cli.py  factor_cli.py  trading_cli.py
src/trading_analyze/data_pipeline/: __init__.py  converter.py  downloader.py  validator.py
src/trading_analyze/data_pipeline/sources/: __init__.py
src/trading_analyze/dataset/: README.md
src/trading_analyze/factor_mining/: __init__.py  qlib_backtester.py  qlib_factor_calculator.py
src/trading_analyze/factor_mining/strategies/: __init__.py
tests/: conftest.py  test_factor_mining.py  test_main.py  test_run.py
tests/cli/: test_data_cli.py  test_factor_cli.py
tests/data_pipeline/: test_converter.py  test_downloader.py  test_validator.py
tests/fixtures/: test_data_generator.py
